# documark

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
documark/: __init__.py  cli.py  converter.py  utils.py
documark/converters/: __init__.py  base.py  excel_converter.py  html_converter.py  image_converter.py  pdf_converter.py  powerpoint_converter.py  text_converter.py  word_converter.py
tests/: __init__.py  test_converter.py
